--- a/react-parallax-scroll/package.json
+++ b/react-parallax-scroll/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fullpage/react-fullpage": "^0.1.40",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,10 +14,11 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-scroll-parallax": "^3.4.5",
     "sass": "^1.69.5",
+    "smooth-scrollbar": "^8.8.4",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
